2012-04-20 18:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormResourceEditor.m: Correct compiler warnings.

2012-04-20 12:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormNSPopUpButton.h
	* Palettes/2Controls/GormNSPopUpButton.m: Added new files for
	Gorm subclass of NSPopUpButton.

2012-04-20 12:03-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormCustomView.m
	* GormCore/GormFilesOwner.m
	* GormCore/GormFunctions.m
	* GormObjCHeaderParser/OCHeaderParser.m
	* Palettes/2Controls/ControlsPalette.m
	* Palettes/2Controls/GNUmakefile
	* Palettes/2Controls/GormPopUpButtonEditor.m
	* Palettes/3Containers/GormNSBrowser.m
	* Palettes/4Data/GormImageViewAttributesInspector.m: Correct
	compiler warnings found by clang.

2012-04-20 10:34-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormLib/IBObjectAdditions.m
	* GormObjCHeaderParser/OCClass.m
	* GormObjCHeaderParser/OCHeaderParser.m
	* GormObjCHeaderParser/OCIVarDecl.m
	* GormObjCHeaderParser/OCIVar.m
	* GormObjCHeaderParser/OCMethod.m
	* GormObjCHeaderParser/ParserFunctions.m: Fix compiler warnings
	when building with clang.

2012-04-20 02:11-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormClassInspector.m
	* GormCore/GormClassManager.m
	* GormCore/GormDocument.m
	* GormCore/GormGenericEditor.m
	* GormCore/GormObjectInspector.m
	* GormCore/GormOutlineView.m
	* GormCore/GormPrivate.h
	* GormCore/GormPrivate.m
	* Palettes/0Menus/GormMenuEditor.m
	* Palettes/1Windows/GormDrawerAttributesInspector.m
	* Palettes/3Containers/GormTableColumnAttributesInspector.m
	* Palettes/3Containers/GormTableViewEditor.m
	* Palettes/4Data/DataPalette.m
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: Change int/unsigned int to NSInteger
	and NSUInteger to address 64-bit issues.  Patch by
	Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Plugins/Gorm/GormGormWrapperLoader.m
	* Plugins/Nib/GormNibWrapperBuilder.m